--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,24 @@
     width: 37em;
     background-color: grey;
     border-radius: 2em;
-    box-shadow: inset;
+    box-shadow: inset 0 0 0.5em 0.5em rgb(98, 94, 94);
+    border-color: rgb(78, 78, 78);
+    display: flex;
 
 }
+
+.select{
+    height: 3em;
+    width: 3em;
+    margin-left: 3em;
+    display: flex;
+    font-family: Arial, sans-serif;
+    
+}
+
+.joystick1 {
+    height: 18em;
+    width: 4em;
+   
+}
+
