se añade boton de flechas para el movimiento de la consola

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,12 @@
 
 }
 
+.joystick1 {
+    height: 18em;
+    width: 4em;
+
+}
+
 .select{
     height: 2em;
     width: 2em;
@@ -50,9 +56,27 @@
     background-color: black;
 }
 
-.joystick1 {
-    height: 18em;
-    width: 4em;
+.arrow1 {
+    margin-left: 3.2em;
+    margin-top: 1.5em;
+    height: 4.3em;
+    width: 1.7em;
+    background-color: black;
+    border-radius: 0.5em;
 
+}
+
+.arrow2 {
+    margin-left: 2.1em;
+    margin-top: -3em;
+    height: 1.7em;
+    width: 4em;
+    background-color: black;
+    border-radius: 0.5em;
+
+}
+
+.joyjoy1{
+    
 }
 
