--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,8 @@
         justify-content: center;      
 }
 .anbernic{
-    height: 18em;
-    width: 37em;
+    height: 16em;
+    width: 34em;
     background-color: grey;
     border-radius: 3em;
     box-shadow: inset 0 0 0.5em 0.5em rgb(98, 94, 94);
@@ -34,6 +34,7 @@
 .joystick1 {
     height: 18em;
     width: 4em;
+   
 
 }
 
@@ -50,33 +51,59 @@
 }
 .selectbutton{
     margin-left: 5.1em;
-    height: 0.60em;
-    width: 0.60em;
+    margin-top: -0.3em;
+    height: 0.75em;
+    width: 0.75em;
     border-radius: 50%;
     background-color: black;
 }
 
 .arrow1 {
-    margin-left: 3.2em;
-    margin-top: 1.5em;
-    height: 4.3em;
-    width: 1.7em;
-    background-color: black;
+    margin-left: 3.3em;
+    margin-top: 1em;
+    height: 4.5em;
+    width: 1.5em;
+    background-color: rgb(54, 45, 45);
     border-radius: 0.5em;
 
 }
 
 .arrow2 {
-    margin-left: 2.1em;
+    margin-left: 1.8em;
     margin-top: -3em;
-    height: 1.7em;
-    width: 4em;
-    background-color: black;
+    height: 1.5em;
+    width: 4.5em;
+    background-color: rgb(54, 45, 45);
     border-radius: 0.5em;
+    display: flex;
+    
 
 }
 
-.joyjoy1{
+.joy1{
+    height: 3.7em;
+    width: 3.7em;
+    border-radius: 50%;
+    background-color: rgb(79, 76, 76);
+    margin-top: 2.6em;
+    margin-left: 2.2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+
+
+}
+
+.joy2{
     
+    height: 2.7em;
+    width: 2.7em;
+    border-radius: 50%;
+    background-color: rgb(16, 4, 4);
+
+    
+    
+
 }
 
