--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,8 @@
         justify-content: center;      
 }
 .anbernic{
-    height: 16em;
-    width: 34em;
+    height: 17em;
+    width: 37em;
     background-color: grey;
     border-radius: 3em;
     box-shadow: inset 0 0 0.5em 0.5em rgb(98, 94, 94);
@@ -32,10 +32,9 @@
 }
 
 .joystick1 {
-    height: 18em;
-    width: 4em;
+    height: 17em;
+    width: 7em;
    
-
 }
 
 .select{
@@ -90,20 +89,62 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    box-shadow: inset 0 0 0.5em 0.5em rgb(70, 65, 65);
    
+
 
 
 }
 
 .joy2{
-    
+
     height: 2.7em;
     width: 2.7em;
     border-radius: 50%;
     background-color: rgb(16, 4, 4);
+    
+    
 
-    
-    
 
 }
 
+.borderscreen{
+    height: 16em;
+    width: 23em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(82, 81, 81);
+    margin-top: 0.5em;
+    box-shadow: inset 0 0 0.5em 0.5em rgb(43, 42, 42);
+    border-radius: 1em;
+    
+}
+.screen {
+    height: 15em;
+    width: 22em;
+    background-color: black;
+    box-shadow: outset 0 0 0.5em 0.5em rgb(19, 18, 18);
+    border-radius: 0.7em;
+}
+.start{
+    height: 2em;
+    width: 2em;
+    margin-left: 1.5em;
+    margin-top: 4em;
+    display: flex;
+    font-family: Arial, sans-serif;
+    font-size: 0.5em;
+    font-weight: bold;
+    
+    
+}
+.startbutton{
+    margin-left: 1.2em;
+    margin-top: -0.3em;
+    height: 0.75em;
+    width: 0.75em;
+    border-radius: 50%;
+    background-color: black;
+    
+}
