--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@
     margin-top: -3.3em;
     height: 1.8em;
     width: 4.9em;
-    background-color: rgb(142, 50, 50);
+    background-color: grey;
     border-radius: 0.5em;
     display: flex;
     
@@ -208,6 +208,39 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: blue;
+    color: rgb(0, 255, 115);
     
+}
+.A{
+    height: 1.6em;
+    width: 1.6em;
+    background-color: black;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(166, 1, 14);
+    margin-left: 1.5em;
+    
+}
+.joy3{
+    height: 3.7em;
+    width: 3.7em;
+    border-radius: 50%;
+    background-color: rgb(79, 76, 76);
+    margin-top: 2.6em;
+    margin-left: 1.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: inset 0 0 0.5em 0.5em rgb(70, 65, 65);
+}
+
+.joy4{
+
+    height: 2.7em;
+    width: 2.7em;
+    border-radius: 50%;
+    background-color: rgb(16, 4, 4);
+
 }
