--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@
 
 .arrow1 {
     margin-left: 3.3em;
-    margin-top: 1em;
+    margin-top: 1.8em;
     height: 4.5em;
     width: 1.5em;
     background-color: rgb(54, 45, 45);
@@ -160,7 +160,7 @@
     margin-top: 1.4em;
     height: 4.9em;
     width: 1.8em;
-    background-color: grey;
+    background-color: rgb(159, 94, 94);
     border-radius: 0.5em;
     display: flex;
     justify-content: center;
