--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 *{
     margin: 0%;
     padding: 0;
+    
 }
 
 .container{
@@ -22,12 +23,14 @@
 }
 .anbernic{
     height: 16em;
-    width: 35em;
-    background-color: grey;
+    width: 35em;   
     border-radius: 3em;
     box-shadow: inset 0 0 0.5em 0.5em rgb(98, 94, 94);
     border-color: rgb(78, 78, 78);
     display: flex;
+    background: linear-gradient(90deg,#9e9e9e 0%, #e0e0e0 40%, #777877 80%);
+    background: -webkit-linear-gradient(90deg,#9e9e9e 0%, #e0e0e0 40%, #777877 80%);
+    background: -moz-linear-gradient(90deg,#9e9e9e 0%, #e0e0e0 40%, #777877 80%);
 
 }
 
@@ -64,6 +67,8 @@
     width: 1.5em;
     background-color: rgb(54, 45, 45);
     border-radius: 0.5em;
+    
+
 
 }
 
@@ -75,6 +80,7 @@
     background-color: rgb(54, 45, 45);
     border-radius: 0.5em;
     display: flex;
+   
     
 
 }
@@ -89,7 +95,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: inset 0 0 0.5em 0.5em rgb(70, 65, 65);
+    border: 0.01em solid black;
+    
+    
    
 
 
@@ -103,9 +111,9 @@
     border-radius: 50%;
     background-color: rgb(16, 4, 4);
     
+
     
-
-
+    
 }
 
 .borderscreen{
@@ -118,6 +126,7 @@
     margin-top: 0.5em;
     box-shadow: inset 0 0 0.5em 0.5em rgb(43, 42, 42);
     border-radius: 1em;
+    border: 0.01em solid black;
     
 }
 .screen {
@@ -160,10 +169,11 @@
     margin-top: 0.6em;
     height: 4.9em;
     width: 1.8em;
-    background-color: grey;
+    background-color: rgba(128, 128, 128, 0);
     border-radius: 0.5em;
     display: flex;
     justify-content: center;
+    
     
 
 }
@@ -172,9 +182,10 @@
     margin-top: -3.4em;
     height: 1.8em;
     width: 4.9em;
-    background-color: grey;
+    background-color: rgba(128, 128, 128, 0);
     border-radius: 0.5em;
     display: flex;
+    
     
 
 }
@@ -233,7 +244,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: inset 0 0 0.5em 0.5em rgb(70, 65, 65);
+    border: 0.01em solid black;
 }
 
 .joy4{
