--- a/css/style.css
+++ b/css/style.css
@@ -67,9 +67,20 @@
     width: 1.5em;
     background-color: rgb(54, 45, 45);
     border-radius: 0.5em;
-    
+    display: flex;
+    align-items:center;
+    justify-content: center;
+ 
 
 
+}
+
+.arrowup{
+    margin-bottom: 1.7em;
+    font-size: 1.06em;
+}
+.arrowdown{
+    font-size: 1.06em;
 }
 
 .arrow2 {
@@ -80,9 +91,32 @@
     background-color: rgb(54, 45, 45);
     border-radius: 0.5em;
     display: flex;
-   
+    align-items:center;
+    justify-content: center;
     
+   
 
+
+}
+
+.circle{
+    height: 1.1em;
+    width: 1.1em;
+    border-radius: 50%;
+    background-color: #1f1e1ec7;
+    margin-right: 0.6em;
+    
+}
+
+.arrowleft{
+    margin-right: 0.7em;
+    font-size: 0.9em;
+   
+}
+.arrowright{
+    
+    font-size: 0.9em;
+   
 }
 
 .joy1{
@@ -91,14 +125,12 @@
     border-radius: 50%;
     background-color: rgb(79, 76, 76);
     margin-top: 2.6em;
-    margin-left: 2em;
+    margin-left: 1.7em;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 0.01em solid black;
-    
-    
-   
+    border: 0.1em solid rgba(29, 27, 27, 0.468);
+
 
 
 
@@ -244,7 +276,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 0.01em solid black;
+    border: 0.1em solid rgba(29, 27, 27, 0.468);
 }
 
 .joy4{
